Adição do carrinho

--- a/index.html
+++ b/index.html
@@ -64,11 +64,14 @@
     
     <footer>
         <p>© 2024 Paródia da Shopee. Todos os direitos reservados.</p>
-        <ul id="add-list">
-
-        </ul>
+        
     </footer>
+    <div style="position: absolute; top: 2%; right: 6%; background-color: whitesmoke;">
+    <ul id="add-list" style="list-style: none;">
+        </ul>
+    </div>
 </body>
 <script src="index.js"></script>
 <script src="carrossel2.js"></script>
+<script src="carrinho.js"></script>
 </html>
