Criação da página de carrinho e conserto do bug da área de carrinho na página principal

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="carrinho.js"></script>
     <script src="display.js"></script>
     <script src="showSection.js"></script>
+    <script src="index.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Produtos</a></li>
-                <li><a href="#">Carrinho</a></li>
+                <li><a href="./seccart.html">Carrinho</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
@@ -24,6 +25,7 @@
     <main>
         <!--Primeiro Carrossel (action figures)-->
         <div class="carousel">
+            <!--Imagens do carrossel-->
                 <div class="carousel-container">
                     <div class="carousel-slide">
                     <a target="_blank" href="https://www.google.com/url?url=https://www.amazon.com.br/Saia-bolsos-linho-elastano-02277/dp/B0C87FJFPX%3Fsource%3Dps-sl-shoppingads-lpcontext%26ref_%3Dfplfs%26psc%3D1%26smid%3DAIZ52QBH4261I&rct=j&q=&esrc=s&opi=95576897&sa=U&ved=0ahUKEwja4NHAhtWHAxX2LLkGHfFpJ80QguUECKgL&usg=AOvVaw2CKRnnrjTpE7t8if_zDqW8">
